--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover" style="background-color: black;">
-	<div style="display: contents">%sveltekit.body%</div>
+	<div style="display: flex; justify-content: center;">%sveltekit.body%</div>
 </body>
 
 </html>
