--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover" style="background-color: black;">
-	<div >%sveltekit.body%</div>
-	<!-- <div style="display: flex;">%sveltekit.body%</div> -->
+	<div style="display: flex;">%sveltekit.body%</div>
 </body>
 
 </html>
